--- a/src/personal/templates/personal/admin.html
+++ b/src/personal/templates/personal/admin.html
@@ -18,7 +18,7 @@
     </div>
     <br>
     <table>
-        <tr class="gray-background">
+        <tr class="table-background">
             <th>User ID</th>
             <th>Username</th>
             <th>Request Type</th>
