--- a/src/personal/templates/personal/signup.html
+++ b/src/personal/templates/personal/signup.html
@@ -106,7 +106,7 @@
                             <label>Date of birth:</label>
                         </div>
                         <div class="col-sm-3">
-                            <input type="text" placeholder="Birth Date" id="birthdate" name="birthdate">        
+                            <input type="date" placeholder="Birth Date" id="birthdate" name="birthdate">        
                         </div>
                     </div>
                     <div class="row">
