--- a/src/personal/templates/personal/deposit.html
+++ b/src/personal/templates/personal/deposit.html
@@ -44,6 +44,11 @@
     .submit{
         margin-left: 130px;
     }
+    .border{
+        width: 600px;
+        height: 300px;
+        padding: 30px;
+    }
     
 </style>
 <div class="container-fluid content">
@@ -54,7 +59,7 @@
         <br>
         <form method="post" action="{% url 'create_payment' %}">
         {% csrf_token %}
-        <div class="login-form">
+        <div class="border">
             <h2 class="title">Deposit</h2>
             <hr>
             <div class="row">
