--- a/src/personal/templates/personal/withdraw.html
+++ b/src/personal/templates/personal/withdraw.html
@@ -2,18 +2,9 @@
 
 {% block content %}
 <style>
-    .content h2{
-        color: white;
-        text-shadow: 1px 1px 2px black,
-                     0 0 1em gainsboro,
-                     0 0 0.2em gainsboro;;
-    }
     .login-form{
         border-radius: 15px;
         height: 220px;
-    }
-    .title{
-        margin-left: 12px;
     }
     hr{
         height: 10px;
@@ -21,14 +12,12 @@
         box-shadow: 0 10px 10px -10px black inset;
         margin: 0;
     }
-    .content a{
-        color: white;
+    .content a, .content input{
+        color: black;
         display: inline;
     }
     .btn{
-        border-radius: 20px;
-        border: 1px solid #ffffff;
-        -webkit-text-stroke: .2px white;
+        border-radius: 8px;
     }
     .row{
         padding-bottom: 16px;
@@ -40,9 +29,6 @@
         height: 30px;
         width: 105px;
     }
-    .submit{
-        margin-left: 130px;
-    }
     .border{
         width: 600px;
         height: 250px;
@@ -52,13 +38,13 @@
 <div class="container-fluid content">
     <div class="container">
         <br>
-        <a class="btn" href="/wallet" >Back</a>
+        <a class="btn btn-secondary" href="/wallet" >Back</a>
         <br>
         <br>
         <form method="post" action="/withdraw_user">
         {% csrf_token %}
         <div class="border">
-            <h2 class="title">Withdraw</h2>
+            <h2>Withdraw</h2>
             <hr>
             <div class="row">
                 <div class="col-sm-3 text-end">
@@ -81,7 +67,7 @@
                 </div>
             </div>
             <hr>
-            <button class="btn submit" type="submit">Withdraw</button>
+            <input class="btn btn-secondary" type="submit" value="Withdraw"></input>
             <label class="error title">{{ err }}</label>
         </div>      
         </form>
