--- a/src/personal/templates/personal/deposit.html
+++ b/src/personal/templates/personal/deposit.html
@@ -1,5 +1,3 @@
-{% extends 'base.html' %}
-
 {% block content %}
 <style>
     .content h2{
@@ -51,15 +49,9 @@
     }
     
 </style>
-<div class="container-fluid content">
-    <div class="container">
-        <br>
-        <a class="btn" href="/wallet" >Back</a>
-        <br>
-        <br>
-        <form method="post" action="{% url 'create_payment' %}">
+        
         {% csrf_token %}
-        <div class="border">
+        <div>
             <h2 class="title">Deposit</h2>
             <hr>
             <div class="row">
@@ -85,7 +77,4 @@
             <hr>
             <button class="btn submit" type="submit">Deposit</button>
         </div>
-        </form>
-    </div>
-</div>
 {% endblock content %}
