--- a/src/personal/templates/personal/send.html
+++ b/src/personal/templates/personal/send.html
@@ -1,5 +1,3 @@
-{% extends 'base.html' %}
-
 {% block content %}
 <style>
     .content h2{
@@ -53,27 +51,9 @@
     }
 
 </style>
-<div class="container-fluid content">
-    <div class="container">
-        <br>
-        <a class="btn" href="/wallet" >Back</a>
-        <br>
-        <br>    
         <form id="send" method="post" action="/send_user">
             {% csrf_token %}
-            <div class="border">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h2 class="right-indent">Send Credits</h2>
-                    </div>
-                    <div class="col-sm-6 text-end">
-                        {% if check %}
-                        <h2 class="left-indent">Credits: {{balance}}</h2>
-                        {% else %}
-                        <h2 class="left-indent">Credits: {{request.user.wallet}}</h2>
-                        {% endif %}
-                    </div>
-                </div>
+            <div>
                 <hr>
                 <div class="row spacing">
                     <div class="col-sm-3 text-end">
@@ -98,6 +78,4 @@
                 <label class="success">{{ msg }}</label>
             </div>
         </form>
-    </div>
-</div>
 {% endblock content %}
